2_idioms/2_1_type_safety/tests/delete_after_deny.stderr
error[E0599]: no method named `delete` found for struct `Post<step_2_1::Deleted>` in the current scope
 --> tests/delete_after_deny.rs:6:25
  |
6 |   post.publish().deny().delete();
  |                         ^^^^^^ method not found in `Post<step_2_1::Deleted>`
  |
  = note: the method was found for
          - `Post<step_2_1::Published>`
